--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -18,15 +18,14 @@
     }
   </style>
   <script type="module">
-    fetch('http://localhost:1234/movies')
+    fetch('http://localhost:1234/empresas')
       .then(res => res.json())
-      .then(movies => {
-        const html = movies.map(movie => {
+      .then(companies => {
+        const html = companies.map(company => {
           return `
-            <article data-id="${movie.id}">
-              <h2>${movie.title}</h2>
-              <img src="${movie.poster}" alt="${movie.title}">
-              <p>${movie.year}</p>
+            <article data-id="${company.company_id}">
+              <h2>${company.company_name}</h2>
+              <p>${company.constitution_date}</p>
 
               <button>Eliminar</button>
             </article>
@@ -40,7 +39,7 @@
             const article = e.target.closest('article')
             const id = article.dataset.id
 
-            fetch(`http://localhost:1234/movies/${id}`, {
+            fetch(`http://localhost:1234/empresas/${id}`, {
               method: 'DELETE'
             })
               .then(res => {
